# estimating-wifi

./: .gitignore  .mega-linter.yml  .pre-commit-config.yaml  InRelease  Makefile  Makefile.orig  Packages  Pipfile  Procfile  README.md  Release  Release.gpg  _config.yml  bootstrap.sh  config.init.yaml  config.yaml  configure-pi-wifi.go  configure-pi-wifi.rkt  cpw.rkt  dev-version.txt  dev.shim  directus_demo.py  directus_reval_tables.py  directus_tables.sql  directus_tables_v2.sql  find-ralink.go  go.mod  go.sum  imls-ppa.shim  input-initial-configuration.go  input-initial-configuration_test.go  inventory.yaml  manifest.yml  playbook.yaml  prod.shim  read-initial-configuration.go  read-initial-configuration_test.go  read-token.go  read-token_test.go  requirements.txt  (+7 more)
imls-backend/: .gitignore  DATABASE_NOTES.md  Dockerfile.liveconfig  Dockerfile.pgjwt  README.md  docker-compose.yml  imls-live-config.sh  pyproject.toml
imls-backend/db/: schema.sql
imls-backend/init/: .gitignore  00-config.sql  000-config.sql  010-create-pgjwt.sql  010-schemas.sql  011-roles.sql  020-import-imls.sql  10-import-imls.sql  100-config.sql  120-tables.sql  122-libraries-test-data.sql  123-imls-lookup-data.sql  130-views.sql  140-sequences.sql  200-extensions.sql  210-triggers.sql  300-public_api.sql  310-authentication.sql  320-authenticated_api.sql  320-sensor_api.sql  400-permissions.sql  500-ephemeral.sh  500-indices.sql  500-indicies.sql  README.md  config.sql
imls-backend/runtime/: 100-ephemeral.sh
imls-backend/test/: .gitignore  .test-config  Makefile  README.md  _test_api.py  (+11 more)
(+707 files in other folders)
