[tool.poetry]
name = "imls-backend-test"
version = "0.1.0"
description = "Testing the IMLS backend"
authors = ["James Tranovich <james.tranovich@gsa.gov>"]
license = "Public Domain"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pytest = "^7.1.3"
pytz = "^2022.6"
PyJWT = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
